css/style.css
/* ... */
.filter-assortment::-ms-expand{
	display: none;
}

.filter-assortment:hover,
.filter-assortment:active {
	color: rgb(50, 50, 50);
	outline: none;
}

.select-wrap::before {
	content: '';

	position: absolute;
	top: 13px;
	right: 13px ;

	width: 11px;
	height: 11px;

	background-image: url(../img/select-arrow.svg);
	background-repeat: no-repeat;
	background-position: top left;
}

.select-wrap:hover::before
.select-wrap:active::before {
	background-image: url(../img/select-arrow-black.svg);
}

.filter-sort {
	font-size: 14px;
	line-height: 16px;
	color: rgb(50, 50, 50);

	background-color: rgb(255, 255, 255);
}

.filter-cost:hover {
	cursor: pointer;
}

.filter-cost {
	display: none;
}

.filter-price {
	margin-bottom: 6px;

	line-height: 16px;
}

.range-controls {
	position: relative;
	
	width: 200px;
	height: 20px;
	padding-top: 16px;
	padding-left: 20px;

	background-color: rgba(255, 255, 255, .2);

	border-radius: 18px;
}

.range-controls-scale {
	width: 156px;
	height: 4px;
	padding-left: 20px;

	background: rgba(255, 255, 255, .5);
}

.range-controls-bar {
	width: 100px;
	height: 4px;

	background: rgb(248, 247, 244);
}

.range-controls-toggle {
	position: absolute;
	top: 8px;
	left: 0;

	width: 4px;
	height: 4px;

	background-color: rgb(171, 171, 171);
	border: 8px solid rgb(255, 255, 255);
	border-radius: 50%;
	cursor: pointer;
}

.range-controls-toggle-min {
	left: 35px;
}

.range-controls-toggle-max {
	left: 133px;
}

.filter-layout {
	padding-top: 7px;
	padding-left: 12px;
	padding-bottom: 7px;

	border-radius: 15px;
	background-color: rgba(255, 255, 255, .2);
}

.filter-fat-value,
.filter-filler-value {
	position: relative;

	font-size: 16px;
	line-height: 22px;
	font-weight: 500;
/*	outline: 1px solid red;
	color: blue;*/
}

.filter-fat-value {
	margin-right: 14px;
	margin-left: 31px;
}

.filter-filler-value {
	margin-left: 36px;
	margin-right: 15px;
}

.filter-fat,
.filter-filler {
	display: none;
}

.filter-fat-value::before,
.filter-filler-value::before {
	content: '';

	position: absolute;
	top: 0px;
	left: -33px;

	width: 22px;
	height: 22px;

	background-repeat: no-repeat;
	background-position: top left;
	cursor: pointer;
	opacity: 0.8;
}

.filter-fat-value::before {
	top: -2px;
	background-image: url(../img/radio-off.svg);
}

.filter-filler-value::before {
	background-image: url(../img/checkbox-off.svg);
}

.filter-fat:hover + .filter-fat-value::before,
.filter-filler:hover + .filter-filler-value::before,
.filter-fat:focus + .filter-fat-value::before,
.filter-filler:focus + .filter-filler-value::before {
	opacity: 1;
}

.filter-fat:disabled + .filter-fat-value::before,
.filter-filler:disabled + .filter-filler-value::before {
	opacity: 0.4;
}

.filter-fat:checked + .filter-fat-value::before {
	background-image: url(../img/radio-on.svg);
}

.filter-filler:checked + .filter-filler-value::before {
	background-image: url(../img/checkbox-on.svg);
}

.filter-btn {
	display: inline-block;
	margin-top: 22px;
	padding-top: 7px;
	padding-right: 26px;
	padding-bottom: 7px;
	padding-left: 26px;

	font-size: 16px;
	line-height: 18px;
	font-weight: 500;
	color: rgb(255, 255, 255);

	background-color: rgba(255, 255, 255, .2);
	border: 2px solid rgb(255, 255, 255);

	border-radius: 18px;
}

.filter-btn:hover,
.filter-btn:focus {
	color: rgb(50, 50, 50);

	background-color: rgb(255, 255, 255);
	outline: none;
	cursor: pointer;
}

.filter-btn:active {
	color: rgb(50, 50, 50);

	padding-top: 10px;
	padding-right: 27px;
	padding-bottom: 8px;
	padding-left: 27px;

	background-color: rgb(234, 234, 234);
	border: none;
	box-shadow: inset 0 2px 1px rgb(105, 105, 105);
	outline: none;
}
/*END of Filters in catalog.html*/

/*Products*/
.goods {
	margin-bottom: -5px;
}

.goods-list {
	display: flex;
	justify-content: space-between;
	flex-wrap: wrap;
	margin-top: 0;
	margin-bottom: 6px;
	padding: 0;

	list-style: none;

}

.goods-item {
	position: relative;

	width: 267px;
	margin: 0;
	padding: 0;
}

.product {
	position: relative;

	display: flex;
	flex-direction: column;
	width: 267px;
	margin-top: 0;
	margin-right: auto;
	margin-bottom: 39px;
	margin-left: auto;
	padding: 0;

	text-align: center;
}

.product::after {
	content: '';

	position: absolute;
	top: 0;
	left: -13px;

	width: 293px;
	height: 405px;

	border-radius: 5px;

	z-index: 1;
}

.product:hover:after {
	background-color: rgba(255, 255, 255, .2);
	box-shadow: 0 10px 20px 0 rgba(0, 0, 0, .2);
}

.product-hit::after {
	content: '';

	position: absolute;
	top: 0;
	left: 0;

	width: 61px;
	height: 61px;

	background-image: url(../img/hit.svg);
	background-position: top left;
	background-repeat: no-repeat;

	z-index: 2;
}

.product-title {
	margin: 0;
	padding-top: 0;
	padding-right: 5px;
	padding-bottom: 0;
	padding-left: 5px;


	font-size: 16px;
	line-height: 21px;
	font-weight: 500;
	order: 1;
	z-index: 2;
}

.product-title a {
	color: rgb(255, 255, 255);
	border-bottom: 1px solid rgba(255, 255, 255, .2);
}

.product-title a:hover,
.product-title a:focus,
.product-title a:active {
	color: rgb(255, 188, 158);
	border-color: rgba(255, 188, 158, .3);
}

.product-price {
	position: relative;

	margin-top: -57px;
	margin-bottom: 21px;

	font-size: 45px;
	line-height: 45px;
	font-weight: 700;
	text-align: left;
	text-shadow: 1px 1px 3px rgba(49, 50, 53, .5);

	z-index: 2;
}

.product-price span {
	margin-left: 34px;

	font-size: 30px;
}

.product-price img {
	position: absolute;
	top: 5px;
	left: 81px;
}

.btn-product {
	position: absolute;
	bottom: -52px;
	left: 35px;

	padding-right: 15px;
	padding-left: 15px;

	z-index: 2;

	display: none;
}

.product:hover .btn-product,
.product:focus .btn-product {
	display: block;
}

.product:hover .product-img,
.product:focus .product-img {
	z-index: 2;
}

/*END of Products*/

/*Pagination*/
.pagination-list {
	margin-top: 43px;
	margin-bottom: 18px;
	padding: 0;
	padding-bottom: 30px;

	text-align: right;

	border-bottom: 1px solid rgba(255, 255, 255, .3);
	list-style: none;
}
/* ... */

